<resources>
    <string name="app_name">Sporthall Manager</string>
    <string name="save_button">Save</string>
    <string name="usertasks_text">User tasks</string>
    <string name="create_new_event_button">Create new sport event</string>
    <string name="view_enrolled_button">View enrolled events</string>
    <string name="edit_event_button">Edit created event</string>
    <string name="admin_tasks_text">Administrative tasks</string>
    <string name="manage_users_button">Manage users</string>
    <string name="manage_halls_button">Manage sporthalls</string>
    <string name="user_profile_text">User profile</string>
    <string name="join_event_button">Join sport event</string>
    <string name="profile_pic">Profile picture</string>
    <string name="change_phone_hint">Change phone number</string>
    <string name="change_email_hint">Change email-address</string>
    <string name="main_menu_button">Main menu</string>
    <string name="Select_hall_text">Select Sporthall</string>
    <string name="select_button">Select</string>
    <string name="confirm_button">Confirm</string>
    <string name="active_text">Active</string>
    <string name="export_CSV_button">Export all events to CSV file</string>
    <string name="create_event_button">Create event</string>
    <string name="set_sport_text">Set event sport</string>
    <string name="set_stime_text">Set start time</string>
    <string name="set_duration_text">Set duration</string>
    <string name="set_max_particp_text">Set maximum participants</string>
    <string name="set_start_date_create">00:00</string>
    <string name="reservatio_recurs_text">Reservation recurs # of weeks</string>
    <string name="select_sportevent_text">Select Sportevent</string>
    <string name="join_button">Join</string>
    <string name="Delete_hall_button">Delete \nhall</string>
    <string name="enable_button">Enable</string>
    <string name="disable_button">Disable</string>
    <string name="set_hallname_text">Set hallname</string>
    <string name="set_hall_location_text">Set hall location</string>
    <string name="set_halltype_text">Set halltype</string>
    <string name="create_hall_button">Crete hall</string>
    <string name="get_reservations_button">Get \nreservations</string>
    <string name="delete_user_button">Delete \nuser</string>
    <string name="set_username_text">Set username</string>
    <string name="set_password_text">Set password</string>
    <string name="create_user_button">Create user</string>
    <string name="type_numbers_text">Type numbers above</string>
    <string name="joining_to_event_text">Waiting user action to join</string>
    <string name="remove_reservation_button">Remove selected reservation</string>
    <string name="export_reservationCSV_button">Get all reservations \nin CSV-fileformat</string>
    <string name="edit_maximumparticipants_text">Edit maxinum participants</string>
    <string name="edit_duration_text">Edit duration</string>
    <string name="change_sporthall_text">Change sporthall</string>
    <string name="set_event_sport_text">Set event sport</string>
    <string name="select_eventID_text">Select EventID</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>
    <string name="delete_uni_button">Delete University</string>
    <string name="setUniName_text">Set name of the University</string>
    <string name="setUniAddr_text">Set address of the University</string>
    <string name="add_uni_button">Add new university</string>
    <string name="manage_uni_button">Manage Universities</string>
    <string name="remove_user_reservation_button">Delete User\'s \nreservations</string>
    <string name="create_new_user_text">Create new user</string>
    <string name="select_user_text">Select User</string>
    <string name="select_uni_text">Select University</string>
    <string name="create_new_uni_text">Create new University</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_hall_text">Create new hall</string>
    <string name="logout">Log Out</string>
    <string name="isadmin">User is admin</string>
    <string name="istrue">True</string>
    <string name="setPhone">Set phone number</string>
    <string name="setEmail">Set email address</string>
    <string name="firsname">Set Firstname</string>
    <string name="surname">Set Surname</string>
    <string name="cancelEnroll">Cancel Enroll</string>
    <string name="user_uni">Primary University</string>
    <string name="csv">CSV</string>
    <string name="json">JSON</string>
    <string name="export">Export reservations</string>


</resources>
