<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f2f2f">

    <Spinner
        android:id="@+id/UniSpinner_MUser"
        android:layout_width="389dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#F2F5F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bReservations_MUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/get_reservations_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UniSpinner_MUser" />

    <Button
        android:id="@+id/bDeleteUser_MUser"
        android:layout_width="80dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/delete_user_button"
        app:layout_constraintStart_toEndOf="@+id/bReservations_MUser"
        app:layout_constraintTop_toBottomOf="@+id/UniSpinner_MUser" />

    <Button
        android:id="@+id/bDeleteUserReservation_MUser"
        android:layout_width="166dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/remove_user_reservation_button"
        app:layout_constraintStart_toEndOf="@+id/bDeleteUser_MUser"
        app:layout_constraintTop_toBottomOf="@+id/UniSpinner_MUser" />

    <EditText
        android:id="@+id/eNewUsername_MUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginBottom="28dp"
        android:autofillHints="@string/set_username_text"
        android:ems="10"
        android:hint="@string/set_username_text"
        android:inputType="textPersonName"
        android:textColor="#F2F5F8"
        android:textColorHint="#F2F5F8"
        app:layout_constraintBottom_toTopOf="@+id/eNewPassword_MUser"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/eNewPassword_MUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="@string/set_password_text"
        android:ems="10"
        android:hint="@string/set_password_text"
        android:inputType="textPassword"
        android:textColor="#F2F5F8"
        android:textColorHint="#F2F5F8"
        app:layout_constraintBottom_toTopOf="@+id/bAddNewUser_MUser"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bAddNewUser_MUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginBottom="72dp"
        android:onClick="saveUserdata"
        android:text="@string/create_user_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bCancel_MUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="72dp"
        android:onClick="GotoMainMenu"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bAddNewUser_MUser" />

    <TextView
        android:id="@+id/tStatic2_MUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="36dp"
        android:text="@string/create_new_user_text"
        android:textColor="#F2F5F8"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/eNewUsername_MUser"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/eSetUniName_MUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/select_user_text"
        android:textColor="#F2F5F8"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/UniSpinner_MUser"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>