<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f2f2f">

    <Button
        android:id="@+id/bCancel_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="56dp"
        android:onClick="GotoMainMenu"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bSave_account" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="200dp"
        android:autofillHints="@string/change_phone_hint"
        android:ems="10"
        android:hint="@string/change_phone_hint"
        android:inputType="phone"
        android:textColor="#F2F5F8"
        android:textColorHint="#F2F5F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="39dp"
        android:autofillHints="@string/change_email_hint"
        android:ems="10"
        android:hint="@string/change_email_hint"
        android:inputType="textEmailAddress"
        android:textColor="#F2F5F8"
        android:textColorHint="#F2F5F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="60dp"
        android:onClick="logOut"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/bCancel_join"
        app:layout_constraintStart_toEndOf="@+id/bSave_account" />

    <TextView
        android:id="@+id/tUniAccess_account"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="112dp"
        android:inputType="textMultiLine"
        android:textColor="#F2F5F8"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editPhone"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bSave_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="56dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>