<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f2f2f">

    <Button
        android:id="@+id/bCancel_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="56dp"
        android:onClick="GotoMainMenu"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bAddNewUni_MUni" />

    <TextView
        android:id="@+id/tStatic1_MUni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/select_uni_text"
        android:textColor="#F2F5F8"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Unispinner_MUni"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tStatic2_MUni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/create_new_uni_text"
        android:textColor="#F2F5F8"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/eSetNewUniName_MUni"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bDeleteUni_MUni"
        android:layout_width="376dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/delete_uni_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Unispinner_MUni" />

    <Spinner
        android:id="@+id/Unispinner_MUni"
        android:layout_width="380dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:background="#F2F5F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eSetNewUniName_MUni"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="22dp"
        android:autofillHints="@string/setUniName_text"
        android:ems="10"
        android:hint="@string/setUniName_text"
        android:inputType="textPersonName"
        android:textColor="#F2F5F8"
        android:textColorHint="#F2F5F8"
        app:layout_constraintBottom_toTopOf="@+id/eNewUniAddress_MUni"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/eNewUniAddress_MUni"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="47dp"
        android:autofillHints="@string/setUniAddr_text"
        android:ems="10"
        android:hint="@string/setUniAddr_text"
        android:inputType="textPersonName"
        android:textColor="#F2F5F8"
        android:textColorHint="#F2F5F8"
        app:layout_constraintBottom_toTopOf="@+id/bCancel_join"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bAddNewUni_MUni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="56dp"
        android:text="@string/create_new_uni_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>