<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f2f2f">

    <TextView
        android:id="@+id/textStaticJoinevent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/select_sportevent_text"
        android:textColor="#F2F5F8"
        android:textColorHint="#F2F5F8"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/UniSpinner_MUser"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/UniSpinner_MUser"
        android:layout_width="272dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="248dp"
        android:backgroundTint="#F2F5F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bDisablehall_MHalls"
        android:layout_width="101dp"
        android:layout_height="56dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="24dp"
        android:text="@string/join_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/UniSpinner_MUser"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bAddNewUser_MUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="72dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bCancel_MUser"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bCancel_MUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="72dp"
        android:onClick="GotoMainMenu"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textJoinSuccess"
        android:layout_width="379dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="34dp"
        android:text="@string/joining_to_event_text"
        android:textColor="#F2F5F8"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bAddNewUser_MUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>